Adjust to Java 11